@@ -18,7 +18,11 @@ stopwords = validator
 [Prereqs / DevelopRequires]
 Moose      = 2.0000
 Specio     = 0.14
+Sub::Name  = 0
 Type::Tiny = 0
+
+[Prereqs / Recommends]
+Sub::Name = 0
 
 [Prereqs / TestRequires]
 Type::Tiny = 0
