@@ -137,6 +137,9 @@ If this is given, then the generated subroutine will be named using
 L<Sub::Name>. This is strongly recommended as it makes it possible to
 distinguish different check subroutines when profiling or in stack traces.
 
+Note that you must install L<Sub::Name> yourself separately, as it is not
+required by this distribution, in order to avoid requiring a compiler.
+
 =back
 
 =head2 source_for(...)
