@@ -3,6 +3,7 @@ use warnings;
 
 use Test2::Bundle::Extended;
 use Test2::Plugin::NoWarnings;
+use Test2::Require::Module 'Sub::Name';
 
 use Params::ValidationCompiler qw( validation_for );
 
